--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <label for="distance">distance (KM)</label>
+    <input type="number" id="distance"></input>
+
+    <label for="age">Your age</label>
+    <input type="number" id="age"></input>
+
+    <button>Click Me!</button>
 
 
     <script src="./js/script.js"></script>
