--- a/index.html
+++ b/index.html
@@ -4,19 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Train-form</title>
 </head>
 
 <body>
-    <label for="distance">distance (KM)</label>
-    <input type="number" id="distance"></input>
+    <header class="d-flex justify-content-center align-items-center mb-3 m-1 border rounded-3">
 
-    <label for="age">Your age</label>
-    <input type="number" id="age"></input>
+        <h2 class="text-white">Compagnia sicura di treni</h2>
 
-    <button>Click Me!</button>
+    </header>
+    <div class="container form">
+        <div class="row border rounded-3 bg-light mb-4">
+            <div class="col-6">
+                <label for="distance" class="form-label">distance (KM)</label>
+                <input type="number" id="distance" class="form-control"></input>
+            </div>
 
+            <div class="col-6">
+                <label for="age" class="form-label">Your age (Years)</label>
+                <input type="number" id="age" class="form-control"></input>
+            </div>
+            <div class="d-flex justify-content-center p-3">
+                <button class="badge bg-danger border-0">Click Me!</button>
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-2 text-center">
+                <div class="card">
+                    <h3 class="fs-4 border-bottom p-2">Your info</h3>
+                    <p id="showage">Qui comparirà la tua età</p>
+                    <p id="showkm">Qui compariranno i tuoi KM</p>
+                </div>
+            </div>
+
+            <div class="col-4">
+
+            </div>
+
+            <div class="col-6 text-center">
+                <div class="card">
+                    <h3 class="fs-4 border-bottom p-2">Why that' the price?</h3>
+                    <p id="pricecalc">Qui comparirà la tua età</p>
+                    <p id="showkm">Qui compariranno i tuoi KM</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
