first implementation of visualization of whi thats the price

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="col-6 text-center">
                 <div class="card">
                     <h3 class="fs-4 border-bottom p-2">Why that' the price?</h3>
-                    <p id="pricecalc">Qui comparirà la tua età</p>
-                    <p id="showkm">Qui compariranno i tuoi KM</p>
+                    <p id="pricecalc">Qui comparirà il calcolo del prezzo</p>
+
                 </div>
             </div>
 
